# Copyright 2016 The Gfx-rs Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gfx_device_dx11"
version = "0.8.2"
description = "DirectX-11 backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx_device_dx11"

[lib]
name = "gfx_device_dx11"

[dependencies]
log = "0.4"
gfx_core = { path = "../../core", version = "0.9" }
winapi = { version = "0.3", features = ["d3d11", "d3dcommon", "d3dcompiler", "winerror"] }
