[package]
name = "gfx-backend-dx12"
version = "0.2.0"
description = "DirectX-12 API backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-dx12"
workspace = "../../.."

[features]
default = ["winit"]

[lib]
name = "gfx_backend_dx12"

[dependencies]
gfx-hal = { path = "../../hal", version = "0.2" }
range-alloc = { path = "../../auxil/range-alloc", version = "0.1" }
bitflags = "1"
derivative = "1"
d3d12 = "0.1"
log = { version = "0.4" }
smallvec = "0.6"
spirv_cross = { git = "https://github.com/grovesNL/spirv_cross", features = ["hlsl"] }
winapi = { version = "0.3", features = ["basetsd","d3d12","d3d12sdklayers","d3d12shader","d3dcommon","d3dcompiler","dxgi1_2","dxgi1_3","dxgi1_4","dxgi1_6","dxgidebug","dxgiformat","dxgitype","handleapi","minwindef","synchapi","unknwnbase","winbase","windef","winerror","winnt","winuser"] }
winit = { version = "0.19", optional = true }
