
# Copyright 2016 The Gfx-rs Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gfx_device_dx12ll"
version = "0.1.1"
description = "DirectX-12 (Low Level) backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]

[lib]
name = "gfx_device_dx12ll"

[dependencies]
log = "0.3"
gfx_corell = { path = "../../corell", version = "0.1.0" }
d3d12-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
d3dcompiler-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
dxgi-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
dxguid-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
comptr = { git = "https://github.com/msiglreith/comptr-rs.git" }
winapi = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
winit = "0.7"
