
[package]
name = "gfx_device_dx12ll"
version = "0.1.1"
description = "DirectX-12 (Low Level) backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
workspace = "../../.."

[lib]
name = "gfx_device_dx12ll"

[dependencies]
log = "0.3"
gfx_corell = { path = "../../corell", version = "0.1.0" }
d3d12-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
d3dcompiler-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
dxgi-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
dxguid-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
kernel32-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
comptr = { git = "https://github.com/msiglreith/comptr-rs.git", branch = "gfx" }
winapi = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
winit = "0.7"
