[package]
name = "gfx-backend-empty"
version = "0.1.0"
description = "Empty backend for gfx-rs"
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx-backend-empty"
workspace = "../../.."
edition = "2018"

[lib]
name = "gfx_backend_empty"

[dependencies]
gfx-hal = { path = "../../hal", version = "0.1" }
winit = { version = "0.19", optional = true }
