[package]
name = "gfx-backend-gl"
version = "0.6.0"
description = "OpenGL backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-gl"
workspace = "../../.."
edition = "2018"

[lib]
name = "gfx_backend_gl"

[features]
default = ["x11"]

[dependencies]
arrayvec = "0.5"
bitflags = "1"
log = "0.4"
hal = { path = "../../hal", version = "0.6", package = "gfx-hal" }
auxil = { path = "../../auxil/auxil", version = "0.5", package = "gfx-auxil", features = ["spirv_cross"] }
smallvec = "1.0"
glow = "0.6.1"
parking_lot = "0.11"
spirv_cross = { version = "0.22", features = ["glsl"]}
lazy_static = "1"
raw-window-handle = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egl = { package = "khronos-egl", version = "2.2" }
x11 = { version = "2", features = ["xlib"], optional = true }

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
tag = "gfx-4"
#TODO: remove `spv-out` once spirv-cross is deprecated
features = ["spv-out", "glsl-out"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.6"
wasm-bindgen = "0.2.51"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Node",
    "Performance",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlSampler",
    "WebGlShader",
    "WebGlTexture",
    "Window",
]
