[package]
name = "gfx-backend-gl"
version = "0.9.0"
description = "OpenGL backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-gl"
workspace = "../../.."
edition = "2018"

[lib]
name = "gfx_backend_gl"

[features]
default = []
cross = ["spirv_cross", "auxil", "naga/spv-out"]

[dependencies]
arrayvec = "0.5"
bitflags = "1"
fxhash = "0.2.1"
log = "0.4"
hal = { package = "gfx-hal", path = "../../hal", version = "0.9" }
glow = "0.9"
parking_lot = "0.11"
raw-window-handle = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egl = { package = "khronos-egl", version = "4.1", features = ["dynamic"] }
libloading = "0.7"

[dependencies.auxil]
package = "gfx-auxil"
path = "../../auxil/auxil"
version = "0.10"
features = ["spirv_cross"]
optional = true

[dependencies.spirv_cross]
version = "0.23"
features = ["glsl"]
optional = true

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
tag = "gfx-26"
features = ["spv-in", "glsl-out"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.6"
wasm-bindgen = "0.2.60"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Node",
    "Performance",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlSampler",
    "WebGlShader",
    "WebGlTexture",
    "Window",
]
