[package]
name = "gfx-backend-metal"
version = "0.3.2"
description = "Metal API backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-metal"
workspace = "../../.."
edition = "2018"

[features]
default = []
auto-capture = []
signpost = []

[lib]
name = "gfx_backend_metal"

[dependencies]
hal = { path = "../../hal", version = "0.3", package = "gfx-hal", features = ["fxhash"] }
range-alloc = { path = "../../auxil/range-alloc", version = "0.1" }
arrayvec = "0.4"
bitflags = "1.0"
copyless = "0.1.4"
log = { version = "0.4" }
winit = { version = "0.20.0-alpha3", optional = true }
dispatch = { version = "0.1", optional = true }
metal = { version = "0.17", features = ["private"] }
foreign-types = "0.3"
objc = "0.2.5"
block = "0.1"
cocoa = "0.19"
core-graphics = "0.17"
smallvec = "0.6"
spirv_cross = { version = "0.16", features = ["msl"] }
parking_lot = "0.9"
storage-map = "0.2"

# This forces docs.rs to build the crate on mac, otherwise the build fails
# and we get no docs at all.
[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
