[package]
name = "gfx-backend-metal"
version = "0.6.0"
description = "Metal API backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-metal"
workspace = "../../.."
edition = "2018"

[features]
default = []
auto-capture = []
signpost = []
naga-parse = ["naga/spv-in"]

[lib]
name = "gfx_backend_metal"

[dependencies]
auxil = { path = "../../auxil/auxil", version = "0.5", package = "gfx-auxil", features = ["spirv_cross"] }
hal = { path = "../../hal", version = "0.6", package = "gfx-hal" }
range-alloc = { path = "../../auxil/range-alloc", version = "0.1" }
arrayvec = "0.5"
bitflags = "1.0"
copyless = "0.1.4"
log = { version = "0.4" }
dispatch = { version = "0.2", optional = true }
metal = { git = "https://github.com/gfx-rs/metal-rs", rev="ba08f5f98c70ab941020b8997936c9c75363b9aa", features = ["private"] }
foreign-types = "0.3"
objc = "0.2.5"
block = "0.1"
#TODO: remove this, only used for `Id`
cocoa-foundation = "0.1"
spirv_cross = { version = "0.22", features = ["msl"] }
parking_lot = "0.11"
storage-map = "0.3"
lazy_static = "1"
raw-window-handle = "0.3"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
tag = "gfx-5"
#TODO: remove `spv-out` once spirv-cross is deprecated
features = ["spv-out", "msl-out"]
optional = true

# This forces docs.rs to build the crate on mac, otherwise the build fails
# and we get no docs at all.
[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
